--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@tabler/icons-react": "^3.34.0",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-text-align": "^3.0.5",
+    "@tiptap/html": "^3.0.7",
     "@tiptap/pm": "^3.0.5",
     "@tiptap/react": "^3.0.5",
     "@tiptap/starter-kit": "^3.0.5",
@@ -46,6 +47,7 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "html-react-parser": "^5.2.6",
     "input-otp": "^1.4.2",
     "install": "^0.13.0",
     "lucide-react": "^0.525.0",
