--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
     "vaul": "^1.1.2",
-    "zod": "^4.0.5"
+    "zod": "3.25.46"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
